@@ -1,3 +1,8 @@
+2008-11-26  Andreas Kirschbaum
+
+	* Disable output buffering for --debug-protocol and --debug-keyboard
+	options.
+
 2008-11-24  Andreas Kirschbaum
 
 	* Implement resolutions 1920x1200 and 2560x1600.
